# siyuanhelper

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  README.md  README.zh-Hans.md  index.html  mkdocs.yml  mypy.ini  pyproject.toml  requirements.txt  setup.cfg  sitemap.xml  tox.ini
.github/workflows/: codeql-analysis.yml  docs.yml
docs/: index.md  index.zh.md  quickstart.md
docs/zh/: quickstart.md
en/: index.html
en/quickstart/: index.html
quickstart/: index.html
search/: search_index.json
siyuanhelper/: helper.py
src/siyuanhelper/: __init__.py  api.py  exceptions.py
tests/: test_api.py
zh/: index.html
zh/quickstart/: index.html
