[metadata]
name = siyuanhelper
version = 0.0.3
author = Clouder
author_email = clouder0@outlook.com
description = A tool lib for siyuan-note.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/clouder0/siyuanhelper
project_urls =
    Bug Tracker = https://github.com/Clouder0/siyuanhelper/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    aiohttp
python_requires = >=3.6
